--- a/www/index.html
+++ b/www/index.html
@@ -1582,13 +1582,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 					 <tr>
                     <td>Pharma Route</td>
                      <td>:</td>
-                    <td><input type="text" name="dPharmaRoute"    id="dPharmaRoute" placeholder="Pharma Route" readonly style="background-color:#CCC" >
+                    <td><input type="text" name="dPharmaRoute"    id="dPharmaRoute" placeholder="Pharma Route"  style="background-color:#CCC" >
                     </td>
                   </tr>
                    <tr>
                     <td>NMD Route</td>
                      <td>:</td>
-                    <td><input type="text" name="dNMDRoute"   id="dNMDRoute" placeholder="NMD Route" readonly style="background-color:#CCC" >
+                    <td><input type="text" name="dNMDRoute"   id="dNMDRoute" placeholder="NMD Route"  style="background-color:#CCC" >
                     </td>
                   </tr>
                   <!--<tr>
@@ -1676,7 +1676,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
           <table width="100%" border="0">
           <tr>
             <td width="10%" align="left"></td>
-            <td align="center" style="font-size:18px; font-weight:normal; color:#F8F8F8">Add Microunin</td>
+            <td align="center" style="font-size:18px; font-weight:normal; color:#F8F8F8">Add Microunion</td>
             <td width="10%"  ></td> 
           </tr>
         </table>
@@ -5807,4 +5807,4 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     
 </body>
 
-</html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+</html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
